autoscaling/lb_securitygroup.tf
resource "aws_security_group" "loadbalancer" {
  name = "laodbalancer-security-group"
  vpc_id      = var.main_vpc_id


  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
